fx_watcher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-watcher
  labels:
    app: fx-watcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fx-watcher
  template:
    metadata:
      labels:
        app: fx-watcher
    spec:
      containers:
        - name: fx-watcher
          image: kaiweimo/fx_watcher:0.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /metrics
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
