fx_watcher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fx-watcher
  labels:
    app: fx-watcher
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: fx-watcher
